horizontal scroll fix

--- a/css/hero.css
+++ b/css/hero.css
@@ -257,14 +257,6 @@
 					top: 5px;
 					background-color: rgba(255, 255, 255, 0);
 				}
-				&:focus + label::before,
-				&.focus + label::before {
-					opacity: 1;
-				}
-				&:focus + label::after,
-				&.focus + label::after {
-					opacity: 1;
-				}
 			}
 			.empty-tooltip {
 				background: var(--red);
