--- a/css/thanks.css
+++ b/css/thanks.css
@@ -31,8 +31,11 @@ body {
 		var(--medium-green) 100%
 	);
 	min-height: 100vh;
-	overflow-x: hidden;
 	position: relative;
+	max-width: 100vw;
+	* {
+		overflow: hidden;
+	}
 }
 
 /* Animated background shapes */
@@ -57,8 +60,8 @@ body {
 	width: 200px;
 	height: 200px;
 	background: var(--grey);
-	top: 60%;
-	right: -5%;
+	top: 5%;
+	right: 5%;
 	animation-delay: 2s;
 }
 
